# MEF

./: .gitignore  bashBoucle.sh  bashMenu.sh
C++/: CMakeLists.txt  build.sh  clean-all.cmake  cmake_install.cmake  exeFEM  main.cpp  mesh.edp  parameters.txt  square  square.gmsh  square.msh  square.txt  square.txt.gmsh  test.cpp  testFortran.cpp  testmain.cpp  writeOxy.sh
C++/FREEFEMTESTS/: pb3.edp
C++/include/: Edge.h  Edge.hpp  Element.h  Element.hpp  FEMIntegrale.h  FEMIntegrale.hpp  FEMParameters.h  FEMParameters.hpp  FEMProblem.h  FEMUtilities.h  FEMUtilities.hpp  Mesh.h  Mesh.hpp  Node.h  Quadrature.h  Quadrature.hpp  Solver.h  Solver.hpp  Types.h  Types.hpp
C++/python/: UI.py  fct.cpp  oxySol3D.py
C++/results/: simu1.txt  solPb3.txt
C++/src/: Edge.cpp  Element.cpp  FEMIntegrale.cpp  FEMParameters.cpp  FEMProblem.cpp  FEMUtilities.cpp  Mesh.cpp  Node.cpp  Quadrature.cpp  Solver.cpp
FicMaillaTest/: NUMREF.Test  RefNum2.txt  Tests.1x1  car1x1t_4.txt
FicMaillaTest/maillage/: README  d2q1_32  d2t1_2  d2t1_32  d2t1_64  d2t1_8
FicMaillage/: d2q1_16  d2q1_2  d2q1_4  d2q1_64  d2q1_8  d2t1_16  d2t1_4
FichiersResultats/: fort.311  fort.312  fort.313  fort.321  fort.322  fort.323  fort.411  fort.412  fort.413  fort.421  fort.422  fort.423  solCalc411.txt  solCalc412.txt  solCalc413.txt  solCalc421.txt  solCalc422.txt  solCalc423.txt
FonctionC/: calSol.c  menu.c  solex.c
FonctionC/FctsAssemblage/: assemblage.c  dSMDaSMO.c  dSMOaPR.c  decompLU.c
FonctionC/FctsCalcul/: ADWDW.c  W.c  alloctabI.c  cal1Elem.c  calDerFbase.c  calFbase.c  fdp.c  intAret.c  intElem.c  invertM2x2.c  lecNumRef.c  lecfima.c  matJacob.c  numNaret.c  ppquad.c  returnQ.c  selectPts.c  transFK.c  ww.c
Header/: fdp.h  header.h
Latex/: compteRendu.tex
NumRef/: ref1_1  ref1_2  ref1_3  ref2_2  ref2_3
Python/: graphe.py  sol3D.py  testMatlab.m
tp2a/: alloctab.c  calDerFbase.c  calFbase.c  header.h  invertM2x2.c  main.c  matJacob.c  numAret.c  ppquad.c  selectPts.c
tp2b/: bash.sh  cal1Elem.c  calDerFbase.c  fdp.c  fdp.h  header.h  intElem.c  lecNumRef.c  main.c  matJacob.c  numNaret.c  out.test2.3x3  selectPts.c  test2.3x3
tp3/: READMEtp3  bash.sh  main.c
tp3/fctTp2/: ADWDW.c  W.c  cal1Elem.c  fdp.c  freetab.c  header.h  intAret.c  intElem.c  invertM2x2.c  lecfima.c  matJacob.c  transFK.c  ww.c
tp3/ficMai/: NUMREF.Test
